--- a/src/app/auth/auth/auth.component.html
+++ b/src/app/auth/auth/auth.component.html
@@ -12,17 +12,17 @@
                     <label for="email" class="mt-5 d-flex justify-content-center" >
                         Email
                     </label>
-                    <input type="email" class="form-control mt-2" placeholder="demo@gmail.com">
+                    <input type="email" class="form-control mt-2" placeholder="Demo@gmail.com">
                 </div>
                 <div class="mt-2">
 
                     <label for="password" class="mt-5 d-flex justify-content-center" >
                         Password
                     </label>
-                    <input type="email" class="form-control mt-2">
+                    <input type="password" class="form-control mt-2" placeholder="Your password...">
                 </div>
                 <div class="col-md-12 d-flex justify-content-center mt-5">
-                    <button type="button" class="btn btn-primary" >Login</button>
+                    <button type="button" class="btn btn-primary" (click)="login();" >Login</button>
                 </div>
 
 
