--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -23,12 +23,12 @@
       
       <button mat-button class="menu-button" >
         <mat-icon>person</mat-icon>
-        <span>Crear</span>
+        <span><a [routerLink]="['student/studentCreate']"  >Crear</a></span>
       </button>
       
       <button mat-button class="menu-button" >
         <mat-icon>person</mat-icon>
-        <span>Persona</span>
+        <span><a [routerLink]="['student/students']"  >Lista</a></span>
       </button>
       
       <button mat-button class="menu-button" >
@@ -45,7 +45,7 @@
     </mat-sidenav>
       <mat-sidenav-content>
         <div class="content mat-elevation-z8">
-           Este es el contenido
+           <router-outlet></router-outlet>
         </div>
       </mat-sidenav-content>
     </mat-sidenav-container>
